--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viajava-app",
+  "name": "projeto-via-java",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,13 +18,15 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "bootstrap": "^5.3.7",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.17",
-    "@angular/cli": "^17.3.17",
+    "@angular-devkit/build-angular": "^17.3.14",
+    "@angular/cli": "^17.3.14",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
