--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "projeto-via-java",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
